[gd_scene load_steps=11 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://bullet.png" type="Texture" id=2]
[ext_resource path="res://bullet_destroy (5).png" type="Texture" id=3]
[ext_resource path="res://bullet_destroy (4).png" type="Texture" id=4]
[ext_resource path="res://bullet_destroy (2).png" type="Texture" id=6]
[ext_resource path="res://BulletClank.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "destroy",
"speed": 60.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "bullet",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.901961, 0.611765, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Bullet" type="Area2D" groups=["hit_box", "projectile"]]
collision_layer = 4
collision_mask = 11
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "bullet"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["hit_box"]]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Clank" parent="." instance=ExtResource( 7 )]

[node name="EFFECT" type="Node" parent="."]

[node name="destroy" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade"
anims/RESET = SubResource( 3 )
anims/fade = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="destroy" to="." method="_on_destroy_timeout"]
